@@ -147,12 +147,23 @@ void _mosquitto_check_keepalive(struct mosquitto *mosq)
 
 uint16_t _mosquitto_mid_generate(struct mosquitto *mosq)
 {
+	/* FIXME - this would be better with atomic increment, but this is safer
+	 * for now for a bug fix release.
+	 *
+	 * If this is changed to use atomic increment, callers of this function
+	 * will have to be aware that they may receive a 0 result, which may not be
+	 * used as a mid.
+	 */
+	uint16_t mid;
 	assert(mosq);
 
+	pthread_mutex_lock(&mosq->mid_mutex);
 	mosq->last_mid++;
 	if(mosq->last_mid == 0) mosq->last_mid++;
+	mid = mosq->last_mid;
+	pthread_mutex_unlock(&mosq->mid_mutex);
 	
-	return mosq->last_mid;
+	return mid;
 }
 
 /* Check that a topic used for publishing is valid.
